--- a/cliente/src/app/app.component.html
+++ b/cliente/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The whole content below can be removed with the new code.-->
-<md-toolbar color="primary" class="d-flex flex-row" [class.unicorn-dark-theme]="isDarkTheme">
+<md-toolbar color="primary" class="d-flex flex-row mat-elevation-z15" [class.unicorn-dark-theme]="isDarkTheme">
   <button md-icon-button  (click)="sidenav.toggle()">
   <md-icon>menu</md-icon>
   </button>
